# alphadesk

./: .env.example  CHANGELOG.md  README.md  alembic.ini  alphadesk.db  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: main.py  stats_handler.py
cli/static/: welcome.txt
docs/: alpha-release.md  knowledge-feature.md  next-steps.md  portfolio_factor_intelligence.md  visualization-system.md
docs/adr/: 0001-canonical-evidence-layer.md  0002-persistence-application-services.md
migrations/: env.py
migrations/versions/: 20260718_0001_initial_schema.py  20260718_0002_portfolio_product.py  20260718_0003_thesis_journal_product.py  20260718_0004_private_research.py  20260721_0005_knowledge_catalog.py  20260721_0006_monitoring_ops.py  20260721_0007_factor_intelligence.py
scripts/: sec_demo.py
tests/: test_api_v1.py  test_domain.py  test_evals.py  test_evidence_intelligence.py  test_factor_intelligence.py  test_fred.py  test_graph_parallel.py  test_knowledge_api.py  test_market_view.py  test_monitoring_api.py  test_ops_api.py  test_persistence.py  test_portfolio.py  test_portfolio_api.py  test_portfolio_integration.py  test_portfolio_product.py  test_private_research_api.py  test_runs_start_api.py  test_sec.py  test_structured_preservation.py  test_thesis.py  test_thesis_diff.py  test_thesis_journal_api.py  test_thesis_workflow.py  test_ui_feed.py  test_visualization_system.py  test_web_app.py
tests/fixtures/portfolios/: broker_mixed_20.csv  unusual_headers.csv
tradingagents/: default_config.py
tradingagents/agents/: schemas.py
tradingagents/agents/analysts/: sentiment_analyst.py
tradingagents/agents/managers/: portfolio_manager.py  research_manager.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  structured.py
tradingagents/api/: __init__.py  app.py  deps.py  run_worker.py
tradingagents/api/v1/: cards.py  events.py  evidence.py  factor_models.py  journal.py  knowledge.py  monitoring.py  ops.py  portfolios.py  research.py  router.py  runs.py  theses.py  watchlists.py  workspaces.py
tradingagents/dataflows/: fred.py  interface.py  sec.py  yfinance_news.py
tradingagents/domain/: __init__.py  schemas.py  store.py
tradingagents/evals/: __init__.py  contracts.py  dataset.py  governance.py  runner.py
tradingagents/evals/data/: securities_v1.json
tradingagents/evals/fixtures/: good_run.json  lookahead_fail.json  unsupported_fail.json
tradingagents/evidence/: __init__.py  schemas.py  store.py
tradingagents/factor_intelligence/: __init__.py  catalog.py  characteristics.py  exposures.py  fixtures.py  schemas.py  service.py
tradingagents/graph/: analyst_subgraph.py  propagation.py  setup.py  trading_graph.py
tradingagents/journal/: __init__.py  schemas.py  store.py
tradingagents/knowledge/: __init__.py  schemas.py  seed.py  service.py
tradingagents/knowledge/data/: catalog_v1.json
tradingagents/market_view/: __init__.py  builder.py  schemas.py  store.py
tradingagents/monitoring/: __init__.py  materiality.py  pollers.py  scheduler.py  schemas.py  service.py
tradingagents/observability/: __init__.py  circuit.py  logging.py  pricing.py  schemas.py  usage.py
tradingagents/persistence/: __init__.py  exporters.py  models.py  object_store.py  session.py  settings.py
tradingagents/persistence/repositories/: __init__.py  cards.py  events.py  evidence.py  factor_intelligence.py  journal.py  knowledge.py  monitoring.py  (+7 more)
tradingagents/portfolio/: __init__.py  cli.py  context.py  csv_loader.py  preview.py  product.py  runner.py  schemas.py  service.py  store.py
tradingagents/research/: __init__.py  ingest.py  service.py
tradingagents/thesis/: __init__.py  diff.py  schemas.py  service.py  store.py  triggers.py  workflow.py
tradingagents/ui/: __init__.py  agent_comments.py  chart_adapters.py  chart_registry.py  chart_runtime.py  chart_selector.py  chart_spec.py  chart_validator.py  chart_wrappers.py  charts.py  deck_builder.py  feed_cli.py  feed_schema.py  indicators.py  knowledge_attach.py  market_data.py  render.py  runs.py  sample.py  visualization_intent.py  visualization_tokens.py
tradingagents/web/: __init__.py
(+3 files in other folders)
